--- a/elerhetoseg.html
+++ b/elerhetoseg.html
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Hívj most</div>
-    <div class="address-bar">Írj üzenetet</div>
+    <div class="brand">Hívj most: +36/30-983-3675</div>
+    <div class="address-bar">Írj üzenetet: acsteto@freemail.hu</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -47,13 +47,13 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Hívj most</a>
+                <div class="navbar-brand">Hívj most: <a class="tel" href="tel:+36309833675">+36/30-983-3675</a></div>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="rolunk.html">Rólunk</a>
+                        <a href="index.html">Rólunk</a>
                     </li>
                     <li>
                         <a href="szaktudas.html">Szaktudás</a>
@@ -81,18 +81,17 @@
                 </div>
                 <div class="col-md-4">
                     <p>Tel.:
-                        <strong>+36309999999</strong>
+                        <strong><a href="tel:+36309833675">+36/30-983-3675</a></strong>
                     </p>
                     <p>E-mail:
-                        <strong><a href="mailto:name@example.com">name@example.com</a></strong>
+                        <strong><a href="mailto:name@example.com">acsteto@freemail.hu</a></strong>
                     </p>
                     <p>Lakcím:
-                        <strong>8444 Szentgál
+                        <strong>8444 Szentgál,
                             <br>Fűzfa utca 5.</strong>
                     </p>
                 </div>
                 <div class="col-md-8">
-                    <div class="overlay" onClick="style.pointerEvents='none'"></div>
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2714.8217491173064!2d17.73492801561376!3d47.12216467915552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47699d9ac2ff369d%3A0x237a78d1cf0faa01!2zRsWxemZhIHUuIDUsIFN6ZW50Z8OhbCwgODQ0NA!5e0!3m2!1shu!2shu!4v1454801851338" width="100%" height="400" scrollwheel="false" frameborder="0" style="border:0" allowfullscreen></iframe>                </div>
                 <div class="clearfix"></div>
             </div>
