--- a/szaktudas.html
+++ b/szaktudas.html
@@ -50,8 +50,8 @@
 
 <body>
 
-    <div class="brand">Hívj most</div>
-    <div class="address-bar">Írj üzenetet</div>
+    <div class="brand">Hívj most: +36/30-983-3675</div>
+    <div class="address-bar">Írj üzenetet: acsteto@freemail.hu</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -65,13 +65,13 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Hívj most</a>
+                <div class="navbar-brand">Hívj most: <a class="tel" href="tel:+36309833675">+36/30-983-3675</a></div>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="rolunk.html">Rólunk</a>
+                        <a href="index.html">Rólunk</a>
                     </li>
                     <li>
                         <a href="szaktudas.html">Szaktudás</a>
