--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 <body>
 
-    <div class="brand">Hívj most</div>
-    <div class="address-bar">Írj üzenetet</div>
+    <div class="brand">Hívj most: +36/30-983-3675</div>
+    <div class="address-bar">Írj üzenetet: acsteto@freemail.hu</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -47,13 +47,13 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Hívj most</a>
+                <div class="navbar-brand">Hívj most: <a class="tel" href="tel:+36309833675">+36/30-983-3675</a></div>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="rolunk.html">Rólunk</a>
+                        <a href="index.html">Rólunk</a>
                     </li>
                     <li>
                         <a href="szaktudas.html">Szaktudás</a>
@@ -74,12 +74,14 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">nem fontos
-                        <strong>fontos cím</strong>
+                    <h2 class="intro-text text-center">
+                        <strong>Bemutatkozás</strong>
                     </h2>
                     <hr>
-                    <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets.</p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                    <p>Ács-, tetőfedő szakemberként vállalom  a Dunántúlon, Veszprém megye területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.</p>
+                    <p>
+                      Több mint 20 éves <a href="szaktudas.html"><strong>szakmai múltam</strong></a> és az elkészített igényes, olykor bonyolult tetőszerkezetek bizonyítják, hogy a <strong>megfelelő helyen jársz!</strong>
+                    </p>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -89,24 +91,46 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">nem fontos
-                        <strong>fontos cím</strong>
+                    <h2 class="intro-text text-center">
+                        <strong>Tevékenységi kör</strong>
                     </h2>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-                </div>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">nem fontos
-                        <strong>fontos cím</strong>
-                    </h2>
-                    <hr>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc placerat diam quis nisl vestibulum dignissim. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
+                    <div class="col-lg-6">
+                      <h5>Tetőszerkezetek</h5>
+                      <ul>
+                        <li>Új építésű tetőszerkezetek</li>
+                        <li>Héjazat csere</li>
+                        <li>Palatetők átfedése cserepeslemezzel (<cite>Hivatalos Gerard szakkivitelező</cite>)</li>
+                      </ul>
+                    </div>
+                    <div class="col-lg-6 height">
+                      <h5>Gipszkarton rendszerek</h5>
+                      <ul>
+                        <li>Csarnokok gipszkartonozása</li>
+                        <li>Belső válaszfalak, mennyezetek gipszkartonozása</li>
+                      </ul>
+                    </div>
+                    <div class="col-lg-6">
+                      <h5>Gyalultszerkezetes munkák</h5>
+                      <ul>
+                        <li>Kocsibeállók</li>
+                        <li>Pergolák</li>
+                        <li>Teraszfedés</li>
+                        <li>Udvari kiülők</li>
+                      </ul>
+                    </div>
+                    <div class="col-lg-6">
+                      <h5>Kisebb ácsmunkák</h5>
+                      <ul>
+                        <li>Kutyaólak</li>
+                        <li>Udvari játékok</li>
+                        <li>Padok, asztalok</li>
+                        <li>Szerszámtárolók</li>
+                      </ul>
+                    </div>
+                    <div class="col-lg-12 alone">
+                      <h5>Könnyűszerkezetes házak</h5>
+                    </div>
                 </div>
             </div>
         </div>
