--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">
-                        <strong>Bemutatkozás</strong>
+                    <h2 class="intro-text text-center">Bemutatkozás
+                        <strong>Nagy Attila</strong>
                     </h2>
                     <hr>
                     <p>Ács-, tetőfedő szakemberként vállalom  a Dunántúlon, Veszprém megye területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.</p>
