--- a/elerhetoseg.html
+++ b/elerhetoseg.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Az acstetofedo.hu elérhetőségei. Érdeklődj telefonon vagy e-mailben. Árajánlat személyes megbeszélés, helyszíni femlérés vagy tervrajz alapján!">
+    <meta name="author" content="Nagy Kristóf">
 
-    <title>Fejléc cím</title>
+    <title>Ácstetőfedő | Elérhetőség - Keress Minket</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -74,9 +74,9 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Vedd fel a kapcsolatot
+                    <h1 class="intro-text text-center">Vedd fel a kapcsolatot
                         <strong>Velünk</strong>
-                    </h2>
+                    </h1>
                     <hr>
                 </div>
                 <div class="col-md-4">
@@ -88,11 +88,11 @@
                     </p>
                     <p>Lakcím:
                         <strong>8444 Szentgál,
-                            <br>Fűzfa utca 5.</strong>
+                            <br><span class="street">Fűzfa utca 5.</span></strong>
                     </p>
                 </div>
                 <div class="col-md-8">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2714.8217491173064!2d17.73492801561376!3d47.12216467915552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47699d9ac2ff369d%3A0x237a78d1cf0faa01!2zRsWxemZhIHUuIDUsIFN6ZW50Z8OhbCwgODQ0NA!5e0!3m2!1shu!2shu!4v1454801851338" width="100%" height="400" scrollwheel="false" frameborder="0" style="border:0" allowfullscreen></iframe>                </div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2714.8217491173064!2d17.73492801561376!3d47.12216467915552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47699d9ac2ff369d%3A0x237a78d1cf0faa01!2zRsWxemZhIHUuIDUsIFN6ZW50Z8OhbCwgODQ0NA!5e0!3m2!1shu!2shu!4v1454801851338" width="100%" height="400" scrollwheel="false" frameborder="0" style="border:0" allowfullscreen></iframe></div>
                 <div class="clearfix"></div>
             </div>
         </div>
