--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Ács-, tetőfedő szakemberként vállalom Veszprém megye területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.">
+    <meta name="author" content="Nagy Kristóf">
 
-    <title>Fejléc cím</title>
+    <title>Ácstetőfedő | Bemutatkozunk</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -74,13 +74,19 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">
+                    <h1 class="intro-text text-center">
                         <strong>Bemutatkozás</strong>
-                    </h2>
+                    </h1>
                     <hr>
                     <p>Ács-, tetőfedő szakemberként vállalom  a Dunántúlon, Veszprém megye területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.</p>
                     <p>
-                      Több mint 20 éves <a href="szaktudas.html"><strong>szakmai múltam</strong></a> és az elkészített igényes, olykor bonyolult tetőszerkezetek bizonyítják, hogy a <strong>megfelelő helyen jársz!</strong>
+                      Több mint 20 éves <a href="szaktudas.html"><strong>szakmai múltam</strong></a> és az elkészített igényes, olykor bonyolult tetőszerkezetek bizonyítják, hogy <strong>a megfelelő helyen jársz!</strong>
+                    </p>
+                    <p>
+                      <strong>Árajánlat személyes megbeszélés, helyszíni felmérés vagy tervrajz alapján!</strong>
+                    </p>
+                    <p>
+                      <strong>Érdeklődj</strong> a <strong><a href="tel:+36309833675">+36/30-983-3675</a></strong> telefonszámon vagy az <strong><a href="mailto:name@example.com">acsteto@freemail.hu</a></strong> e-mail címen!
                     </p>
                 </div>
                 <div class="clearfix"></div>
@@ -91,27 +97,29 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">
+                    <h1 class="intro-text text-center">
                         <strong>Tevékenységi kör</strong>
-                    </h2>
+                    </h1>
                     <hr>
                     <div class="col-lg-6">
-                      <h5>Tetőszerkezetek</h5>
+                      <h2>Tetőszerkezetek</h2>
                       <ul>
                         <li>Új építésű tetőszerkezetek</li>
                         <li>Héjazat csere</li>
                         <li>Palatetők átfedése cserepeslemezzel (<cite>Hivatalos Gerard szakkivitelező</cite>)</li>
                       </ul>
                     </div>
-                    <div class="col-lg-6 height">
-                      <h5>Gipszkarton rendszerek</h5>
+                    <div class="col-lg-6">
+                      <h2>Kisebb ácsmunkák</h2>
                       <ul>
-                        <li>Csarnokok gipszkartonozása</li>
-                        <li>Belső válaszfalak, mennyezetek gipszkartonozása</li>
+                        <li>Kutyaólak</li>
+                        <li>Udvari játékok</li>
+                        <li>Padok, asztalok</li>
+                        <li>Szerszámtárolók</li>
                       </ul>
                     </div>
                     <div class="col-lg-6">
-                      <h5>Gyalultszerkezetes munkák</h5>
+                      <h2>Gyalultszerkezetes munkák</h2>
                       <ul>
                         <li>Kocsibeállók</li>
                         <li>Pergolák</li>
@@ -120,16 +128,14 @@
                       </ul>
                     </div>
                     <div class="col-lg-6">
-                      <h5>Kisebb ácsmunkák</h5>
+                      <h2>Gipszkarton rendszerek</h2>
                       <ul>
-                        <li>Kutyaólak</li>
-                        <li>Udvari játékok</li>
-                        <li>Padok, asztalok</li>
-                        <li>Szerszámtárolók</li>
+                        <li>Csarnokok gipszkartonozása</li>
+                        <li>Belső válaszfalak, mennyezetek gipszkartonozása</li>
                       </ul>
                     </div>
                     <div class="col-lg-12 alone">
-                      <h5>Könnyűszerkezetes házak</h5>
+                      <h2>Könnyűszerkezetes házak</h2>
                     </div>
                 </div>
             </div>
