--- a/szaktudas.html
+++ b/szaktudas.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="hu">
 
 <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="description" content="Az acstetofedo.hu galériája, ahol szakmai tudásunkról a képek magukért beszélnek!">
+    <meta name="author" content="Nagy Kristóf">
 
-    <title>Fejléc cím</title>
+    <title>Ácstetőfedő | Galéria - Szaktudásunk bizonyítékai</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -92,9 +92,9 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">Szaktudásunk
+                    <h1 class="intro-text text-center">Szaktudásunk
                         <strong>Képekben</strong>
-                    </h2>
+                    </h1>
                     <hr>
                 </div>
                 <div class="col-xs-6 col-md-3">
