--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Ács-, tetőfedő szakemberként vállalom Veszprém megye területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.">
     <meta name="author" content="Nagy Kristóf">
 
-    <title>Ácstetőfedő | Bemutatkozunk</title>
+    <title>Ácstetőfedő</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -74,8 +74,8 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h1 class="intro-text text-center">
-                        <strong>Bemutatkozás</strong>
+                    <h1 class="intro-text text-center">Nagy Attila
+                        <strong>Ács és tetőfedő</strong>
                     </h1>
                     <hr>
                     <p>Ács-, tetőfedő szakemberként vállalom  a Dunántúlon, Veszprém megye területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.</p>
@@ -97,8 +97,8 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h1 class="intro-text text-center">
-                        <strong>Tevékenységi kör</strong>
+                    <h1 class="intro-text text-center">Amiben
+                        <strong>Segíthetünk</strong>
                     </h1>
                     <hr>
                     <div class="col-lg-6">
