--- a/elerhetoseg.html
+++ b/elerhetoseg.html
@@ -10,16 +10,16 @@
     <meta name="author" content="Nagy Kristóf">
 
     <title>Ácstetőfedő | Elérhetőség - Keress Minket</title>
+    <link rel="shortcut icon" href="favicon.ico" />
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Custom CSS -->
     <link href="css/business-casual.css" rel="stylesheet">
 
     <!-- Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -81,10 +81,10 @@
                 </div>
                 <div class="col-md-4">
                     <p>Tel.:
-                        <strong><a href="tel:+36309833675">+36/30-983-3675</a></strong>
+                        <strong>+36/30-983-3675<a href="tel:+36309833675"><i class="fa fa-phone"></i></a></strong>
                     </p>
                     <p>E-mail:
-                        <strong><a href="mailto:name@example.com">acsteto@freemail.hu</a></strong>
+                        <strong>acsteto@freemail.hu<a href="mailto:name@example.com"><i class="fa fa-envelope"></i></a></strong>
                     </p>
                     <p>Lakcím:
                         <strong>8444 Szentgál,
