--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="author" content="Nagy Kristóf">
 
     <title>Ácstetőfedő</title>
+    <link rel="shortcut icon" href="favicon.ico" />
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
