--- a/elerhetoseg.html
+++ b/elerhetoseg.html
@@ -47,7 +47,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <div class="navbar-brand">Hívj most: <a class="tel" href="tel:+36309833675">+36/30-983-3675</a></div>
+                <div class="navbar-brand">Hívj <a class="tel" href="tel:+36309833675">+36/30-983-3675</a></div>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -75,20 +75,20 @@
                 <div class="col-lg-12">
                     <hr>
                     <h1 class="intro-text text-center">Vedd fel a kapcsolatot
-                        <strong>Velünk</strong>
+                        <b>Velünk</b>
                     </h1>
                     <hr>
                 </div>
                 <div class="col-md-4">
                     <p>Tel.:
-                        <strong>+36/30-983-3675<a href="tel:+36309833675"><i class="fa fa-phone"></i></a></strong>
+                        <b>+36/30-983-3675<a href="tel:+36309833675"><i class="fa fa-phone"></i></a></b>
                     </p>
                     <p>E-mail:
-                        <strong>acsteto@freemail.hu<a href="mailto:name@example.com"><i class="fa fa-envelope"></i></a></strong>
+                        <b>acsteto@freemail.hu</a></b>
                     </p>
                     <p>Lakcím:
-                        <strong>8444 Szentgál,
-                            <br><span class="street">Fűzfa utca 5.</span></strong>
+                        <b>8444 Szentgál,
+                            <br><span class="street">Fűzfa utca 5.</span></b>
                     </p>
                 </div>
                 <div class="col-md-8">
@@ -117,12 +117,14 @@
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
-        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='https://www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-        ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-72969239-1', 'auto');
+      ga('send', 'pageview');
+
     </script>
 
 </body>
