--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 
     <!-- Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -48,7 +47,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <div class="navbar-brand">Hívj most: <a class="tel" href="tel:+36309833675">+36/30-983-3675</a></div>
+                <div class="navbar-brand">Hívj <a class="tel" href="tel:+36309833675">+36/30-983-3675</a></div>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -81,13 +80,13 @@
                     <hr>
                     <p>Ács-, tetőfedő szakemberként vállalom  a Dunántúlon, Veszprém megye területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.</p>
                     <p>
-                      Több mint 20 éves <a href="szaktudas.html"><strong>szakmai múltam</strong></a> és az elkészített igényes, olykor bonyolult tetőszerkezetek bizonyítják, hogy <strong>a megfelelő helyen jársz!</strong>
+                      Több mint 20 éves <a href="szaktudas.html"><b>szakmai múltam</b></a> és az elkészített igényes, olykor bonyolult tetőszerkezetek bizonyítják, hogy <b>a megfelelő helyen jársz!</b>
                     </p>
                     <p>
-                      <strong>Árajánlat személyes megbeszélés, helyszíni felmérés vagy tervrajz alapján!</strong>
+                      <b>Árajánlat személyes megbeszélés, helyszíni felmérés vagy tervrajz alapján!</b>
                     </p>
                     <p>
-                      <strong>Érdeklődj</strong> a <strong><a href="tel:+36309833675">+36/30-983-3675</a></strong> telefonszámon vagy az <strong><a href="mailto:name@example.com">acsteto@freemail.hu</a></strong> e-mail címen!
+                      <b>Érdeklődj</b> a <b><a href="tel:+36309833675">+36/30-983-3675</a></b> telefonszámon vagy az <b><a href="mailto:name@example.com">acsteto@freemail.hu</a></b> e-mail címen!
                     </p>
                 </div>
                 <div class="clearfix"></div>
@@ -163,12 +162,14 @@
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
-        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='https://www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-        ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-72969239-1', 'auto');
+      ga('send', 'pageview');
+
     </script>
 
 </body>
