--- a/szaktudas.html
+++ b/szaktudas.html
@@ -20,7 +20,6 @@
 
     <!-- Fonts -->
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- Fancybox for gallery -->
     <script type="text/javascript" src="lib/jquery-1.10.2.min.js"></script>
@@ -66,7 +65,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <div class="navbar-brand">Hívj most: <a class="tel" href="tel:+36309833675">+36/30-983-3675</a></div>
+                <div class="navbar-brand">Hívj <a class="tel" href="tel:+36309833675">+36/30-983-3675</a></div>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -94,45 +93,69 @@
                 <div class="col-lg-12">
                     <hr>
                     <h1 class="intro-text text-center">Szaktudásunk
-                        <strong>Képekben</strong>
+                        <b>Képekben</b>
                     </h1>
                     <hr>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/1_b.jpg" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="img/1_s.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/20.jpg" data-fancybox-group="gallery" ><img src="img/rsz_20.jpg" alt="" /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/1_b.jpg" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="img/1_s.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/3.jpg" data-fancybox-group="gallery" ><img src="img/rsz_3.jpg" alt="" /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/1_b.jpg" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="img/1_s.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/9.jpg" data-fancybox-group="gallery" ><img src="img/rsz_9.jpg" alt="" /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/1_b.jpg" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="img/1_s.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/8.jpg" data-fancybox-group="gallery" ><img src="img/rsz_8.jpg" alt="" /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/1_b.jpg" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="img/1_s.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/11.jpg" data-fancybox-group="gallery" ><img src="img/rsz_11.jpg" alt="" /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/1_b.jpg" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="img/1_s.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/16.jpg" data-fancybox-group="gallery" ><img src="img/rsz_16.jpg" alt="" /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/1_b.jpg" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="img/1_s.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/19.jpg" data-fancybox-group="gallery" ><img src="img/rsz_19.jpg" alt="" /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/1_b.jpg" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="img/1_s.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/14.jpg" data-fancybox-group="gallery" ><img src="img/rsz_14.jpg" alt="" /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/1_b.jpg" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="img/1_s.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/10.jpg" data-fancybox-group="gallery" ><img src="img/rsz_10.jpg" alt="" /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/1_b.jpg" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="img/1_s.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/15.jpg" data-fancybox-group="gallery" ><img src="img/rsz_15.jpg" alt="" /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/1_b.jpg" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="img/1_s.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/7.jpg" data-fancybox-group="gallery" ><img src="img/rsz_7.jpg" alt="" /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/1_b.jpg" data-fancybox-group="gallery" title="Lorem ipsum dolor sit amet"><img src="img/1_s.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/13.jpg" data-fancybox-group="gallery" ><img src="img/rsz_13.jpg" alt="" /></a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                  <a class="thumbnail fancybox" href="img/12.jpg" data-fancybox-group="gallery" ><img src="img/rsz_12.jpg" alt="" /></a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                  <a class="thumbnail fancybox" href="img/1.jpg" data-fancybox-group="gallery" ><img src="img/rsz_1.jpg" alt="" /></a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                  <a class="thumbnail fancybox" href="img/2.jpg" data-fancybox-group="gallery" ><img src="img/rsz_2.jpg" alt="" /></a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                  <a class="thumbnail fancybox" href="img/4.jpg" data-fancybox-group="gallery" ><img src="img/rsz_4.jpg" alt="" /></a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                  <a class="thumbnail fancybox" href="img/6.jpg" data-fancybox-group="gallery" ><img src="img/rsz_6.jpg" alt="" /></a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                  <a class="thumbnail fancybox" href="img/5.jpg" data-fancybox-group="gallery" ><img src="img/rsz_5.jpg" alt="" /></a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                  <a class="thumbnail fancybox" href="img/17.jpg" data-fancybox-group="gallery" ><img src="img/rsz_17.jpg" alt="" /></a>
+                </div>
+                <div class="col-xs-6 col-md-3">
+                  <a class="thumbnail fancybox" href="img/18.jpg" data-fancybox-group="gallery" ><img src="img/rsz_18.jpg" alt="" /></a>
                 </div>
                 <div class="clearfix"></div>
             </div>
@@ -156,12 +179,14 @@
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
-        (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-        function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-        e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-        e.src='https://www.google-analytics.com/analytics.js';
-        r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-        ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-72969239-1', 'auto');
+      ga('send', 'pageview');
+
     </script>
 
 </body>
