--- a/szaktudas.html
+++ b/szaktudas.html
@@ -98,64 +98,64 @@
                     <hr>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/20.jpg" data-fancybox-group="gallery" ><img src="img/rsz_20.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/20.jpg" data-fancybox-group="gallery" ><img src="img/rsz_20.jpg" alt="Tetőszerkezet készen." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/3.jpg" data-fancybox-group="gallery" ><img src="img/rsz_3.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/3.jpg" data-fancybox-group="gallery" ><img src="img/rsz_3.jpg" alt="Tetőszerkezet munka közben." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/9.jpg" data-fancybox-group="gallery" ><img src="img/rsz_9.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/9.jpg" data-fancybox-group="gallery" ><img src="img/rsz_9.jpg" alt="Lambériázás." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/8.jpg" data-fancybox-group="gallery" ><img src="img/rsz_8.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/8.jpg" data-fancybox-group="gallery" ><img src="img/rsz_8.jpg" alt="Tetőszerkezet váza." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/11.jpg" data-fancybox-group="gallery" ><img src="img/rsz_11.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/11.jpg" data-fancybox-group="gallery" ><img src="img/rsz_11.jpg" alt="Kupola belsőnézet." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/16.jpg" data-fancybox-group="gallery" ><img src="img/rsz_16.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/16.jpg" data-fancybox-group="gallery" ><img src="img/rsz_16.jpg" alt="Kész lécezés." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/19.jpg" data-fancybox-group="gallery" ><img src="img/rsz_19.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/19.jpg" data-fancybox-group="gallery" ><img src="img/rsz_19.jpg" alt="Tetőszerkezet." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/14.jpg" data-fancybox-group="gallery" ><img src="img/rsz_14.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/14.jpg" data-fancybox-group="gallery" ><img src="img/rsz_14.jpg" alt="Tetőszerkezet." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/10.jpg" data-fancybox-group="gallery" ><img src="img/rsz_10.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/10.jpg" data-fancybox-group="gallery" ><img src="img/rsz_10.jpg" alt="Hajlított gerendás tetőszerkezet." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/15.jpg" data-fancybox-group="gallery" ><img src="img/rsz_15.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/15.jpg" data-fancybox-group="gallery" ><img src="img/rsz_15.jpg" alt="Hajlított tetőszerkezet." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/7.jpg" data-fancybox-group="gallery" ><img src="img/rsz_7.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/7.jpg" data-fancybox-group="gallery" ><img src="img/rsz_7.jpg" alt="Hajlított tetőszerkezet." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/13.jpg" data-fancybox-group="gallery" ><img src="img/rsz_13.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/13.jpg" data-fancybox-group="gallery" ><img src="img/rsz_13.jpg" alt="Kupola félkészen." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/12.jpg" data-fancybox-group="gallery" ><img src="img/rsz_12.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/12.jpg" data-fancybox-group="gallery" ><img src="img/rsz_12.jpg" alt="Tetőszerkezet." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/1.jpg" data-fancybox-group="gallery" ><img src="img/rsz_1.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/1.jpg" data-fancybox-group="gallery" ><img src="img/rsz_1.jpg" alt="Cserepes lemezzel." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/2.jpg" data-fancybox-group="gallery" ><img src="img/rsz_2.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/2.jpg" data-fancybox-group="gallery" ><img src="img/rsz_2.jpg" alt="Cserepes lemez előtt." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/4.jpg" data-fancybox-group="gallery" ><img src="img/rsz_4.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/4.jpg" data-fancybox-group="gallery" ><img src="img/rsz_4.jpg" alt="Csarnok gipszkartonozása és szigetelése." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/6.jpg" data-fancybox-group="gallery" ><img src="img/rsz_6.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/6.jpg" data-fancybox-group="gallery" ><img src="img/rsz_6.jpg" alt="Kész gipszkarton csarnok." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/5.jpg" data-fancybox-group="gallery" ><img src="img/rsz_5.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/5.jpg" data-fancybox-group="gallery" ><img src="img/rsz_5.jpg" alt="Fa játszóka, mászóka." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/17.jpg" data-fancybox-group="gallery" ><img src="img/rsz_17.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/17.jpg" data-fancybox-group="gallery" ><img src="img/rsz_17.jpg" alt="Fa szerszámtároló kunyhó." /></a>
                 </div>
                 <div class="col-xs-6 col-md-3">
-                  <a class="thumbnail fancybox" href="img/18.jpg" data-fancybox-group="gallery" ><img src="img/rsz_18.jpg" alt="" /></a>
+                  <a class="thumbnail fancybox" href="img/18.jpg" data-fancybox-group="gallery" ><img src="img/rsz_18.jpg" alt="Kutyaól." /></a>
                 </div>
                 <div class="clearfix"></div>
             </div>
