--- a/elerhetoseg.html
+++ b/elerhetoseg.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Az acstetofedo.hu elérhetőségei. Érdeklődj telefonon vagy e-mailben. Árajánlat személyes megbeszélés, helyszíni femlérés vagy tervrajz alapján!">
     <meta name="author" content="Nagy Kristóf">
 
-    <title>Ácstetőfedő | Elérhetőség - Keress Minket</title>
+    <title>Ácstetőfedő | Vedd fel a kapcsolatot Velünk</title>
     <link rel="shortcut icon" href="favicon.ico" />
 
     <!-- Bootstrap Core CSS -->
