--- a/szaktudas.html
+++ b/szaktudas.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Az acstetofedo.hu galériája, ahol szakmai tudásunkról a képek magukért beszélnek!">
     <meta name="author" content="Nagy Kristóf">
 
-    <title>Ácstetőfedő | Galéria - Szaktudásunk bizonyítékai</title>
+    <title>Ácstetőfedő | Szaktudásunk képekben</title>
     <link rel="shortcut icon" href="favicon.ico" />
 
     <!-- Bootstrap Core CSS -->
