--- a/elerhetoseg.html
+++ b/elerhetoseg.html
@@ -87,7 +87,7 @@
                         <b>acsteto@freemail.hu</a></b>
                     </p>
                     <p>Lakcím:
-                        <b>8444 Szentgál,
+                        <b>Veszprém, 8444 Szentgál,
                             <br><span class="street">Fűzfa utca 5.</span></b>
                     </p>
                 </div>
