--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <strong>Ács és tetőfedő</strong>
                     </h1>
                     <hr>
-                    <p>Ács-, tetőfedő szakemberként vállalom  a Dunántúlon, Veszprém megye területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.</p>
+                    <p>Ács-, tetőfedő szakemberként vállalom Veszprém megye, Veszprém területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.</p>
                     <p>
                       Több mint 20 éves <a href="szaktudas.html"><b>szakmai múltam</b></a> és az elkészített igényes, olykor bonyolult tetőszerkezetek bizonyítják, hogy <b>a megfelelő helyen jársz!</b>
                     </p>
