--- a/elerhetoseg.html
+++ b/elerhetoseg.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Az acstetofedo.hu elérhetőségei. Érdeklődj telefonon vagy e-mailben. Árajánlat személyes megbeszélés, helyszíni femlérés vagy tervrajz alapján!">
+    <meta name="description" content="Az acstetofedo.hu elérhetőségei. Érdeklődj telefonon vagy e-mailben. Árajánlat személyes megbeszélés, helyszíni felmérés vagy tervrajz alapján!">
     <meta name="author" content="Nagy Kristóf">
 
     <title>Ácstetőfedő | Vedd fel a kapcsolatot Velünk</title>
