--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Ács-, tetőfedő szakemberként vállalom Veszprém megye területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.">
     <meta name="author" content="Nagy Kristóf">
 
-    <title>Ácstetőfedő | Nagy Attila, Ács és tetőfedő</title>
+    <title>Ácstetőfedő | Nagy Attila, Ács és tetőfedő, Veszprém</title>
     <link rel="shortcut icon" href="favicon.ico" />
 
     <!-- Bootstrap Core CSS -->
