--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Ács-, tetőfedő szakemberként vállalom Veszprém megye területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.">
     <meta name="author" content="Nagy Kristóf">
 
-    <title>Ácstetőfedő | Nagy Attila, Ács és tetőfedő, Veszprém</title>
+    <title>Ácstetőfedő | Nagy Attila - Ács és tetőfedő, Veszprém</title>
     <link rel="shortcut icon" href="favicon.ico" />
 
     <!-- Bootstrap Core CSS -->
@@ -78,7 +78,7 @@
                         <strong>Ács és tetőfedő</strong>
                     </h1>
                     <hr>
-                    <p>Ács-, tetőfedő szakemberként vállalom Veszprém megye, Veszprém területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.</p>
+                    <p>Ács és tetőfedő szakemberként vállalom Veszprém megye területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.</p>
                     <p>
                       Több mint 20 éves <a href="szaktudas.html"><b>szakmai múltam</b></a> és az elkészített igényes, olykor bonyolult tetőszerkezetek bizonyítják, hogy <b>a megfelelő helyen jársz!</b>
                     </p>
