--- a/szaktudas.html
+++ b/szaktudas.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Az acstetofedo.hu galériája, ahol szakmai tudásunkról a képek magukért beszélnek!">
+    <meta name="description" content="Az acstetofedo.hu galériája, ahol szaktudásunk képekben bizonyítjuk!">
     <meta name="author" content="Nagy Kristóf">
 
     <title>Ácstetőfedő | Szaktudásunk képekben</title>
