--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Ács-, tetőfedő szakemberként vállalom Veszprém megye területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.">
+    <meta name="description" content="Ács és tetőfedő szakemberként vállalom Veszprém megye területén új és régi családi házak tetőszerkezetének építését, gipszkarton rendszerek kivitelezését és kisebb ácsmunkák készítését.">
     <meta name="author" content="Nagy Kristóf">
 
     <title>Ácstetőfedő | Nagy Attila - Ács és tetőfedő, Veszprém</title>
