--- a/elerhetoseg.html
+++ b/elerhetoseg.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Hívj most: +36/30-983-3675</div>
-    <div class="address-bar">Írj üzenetet: acsteto@freemail.hu</div>
+    <div class="address-bar">Írj üzenetet: acsteto73@gmail.com</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
@@ -84,7 +84,7 @@
                         <b>+36/30-983-3675<a href="tel:+36309833675"><i class="fa fa-phone"></i></a></b>
                     </p>
                     <p>E-mail:
-                        <b>acsteto@freemail.hu</a></b>
+                        <b>acsteto73@gmail.com</a></b>
                     </p>
                     <p>Lakcím:
                         <b>Veszprém, 8444 Szentgál,
