--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 
     <div class="brand">Hívj most: +36/30-983-3675</div>
-    <div class="address-bar">Írj üzenetet: acsteto@freemail.hu</div>
+    <div class="address-bar">Írj üzenetet: acsteto73@gmail.com</div>
 
     <!-- Navigation -->
     <nav class="navbar navbar-default" role="navigation">
