--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                       <b>Árajánlat személyes megbeszélés, helyszíni felmérés vagy tervrajz alapján!</b>
                     </p>
                     <p>
-                      <b>Érdeklődj</b> a <b><a href="tel:+36309833675">+36/30-983-3675</a></b> telefonszámon vagy az <b><a href="mailto:acsteto73@gmail.com">acsteto73@gmail.comu</a></b> e-mail címen!
+                      <b>Érdeklődj</b> a <b><a href="tel:+36309833675">+36/30-983-3675</a></b> telefonszámon vagy az <b><a href="mailto:acsteto73@gmail.com">acsteto73@gmail.com</a></b> e-mail címen!
                     </p>
                 </div>
                 <div class="clearfix"></div>
